@@ -1,13 +1,27 @@
+import java.util.*
+
 plugins {
   id("otel.java-conventions")
 }
 
 description = "OpenTelemetry Java semconv processor"
 
+otelJava {
+  minJavaVersionSupported.set(JavaVersion.VERSION_11)
+}
+
 dependencies {
   api("io.opentelemetry:opentelemetry-sdk")
   testImplementation("io.opentelemetry:opentelemetry-sdk-testing")
 
   compileOnly("com.google.auto.service:auto-service-annotations")
+
   annotationProcessor("com.google.auto.service:auto-service")
+
+}
+
+tasks {
+  compileJava {
+    options.compilerArgs.addAll(Arrays.asList("--add-modules", "jdk.compiler"))
+  }
 }
